--- a/index.html
+++ b/index.html
@@ -122,16 +122,15 @@
         <button onclick="traducirADinosaurio()">Traducir a Dinosaurio</button>
         <button onclick="traducirAEspanol()">Traducir a Español</button>
         <button onclick="copiarTexto()">Copiar</button>
+		<button onclick="borrarTexto()">Borrar</button>
 
         <div class="result-container" id="resultado"></div>
     </div>
 
-    <!-- GIF de Tenor -->
     <div class="gif-container">
         <img src="https://c.tenor.com/Lj_NBDvw_x0AAAAC/tenor.gif" alt="Dinosaurio saludando">
     </div>
 
-    <!-- Iconos de tema -->
     <div style="position: absolute; top: 20px; right: 20px;">
         <i id="themeToggle" class="fas fa-sun" style="cursor: pointer;" onclick="toggleTheme()"></i>
     </div>
@@ -174,7 +173,6 @@
             Object.entries(alfabetoADinosaurio).map(([key, value]) => [value, key])
         );
 
-        // Función para traducir de español a dinosaurio
         function traducirADinosaurio() {
             const texto = document.getElementById("inputText").value.toLowerCase();
             let traduccion = "";
@@ -184,30 +182,25 @@
             document.getElementById("resultado").innerText = traduccion.trim();
         }
 
-		// Función para traducir de dinosaurio a español
 		function traducirAEspanol() {
 			const texto = document.getElementById("inputText").value;
 			let traduccion = "";
 			let i = 0;
 
-			// Crear un array de las claves de dinosaurioAEspanol ordenadas por longitud decreciente
 			const clavesOrdenadas = Object.keys(dinosaurioAEspanol).sort((a, b) => b.length - a.length);
 
-			// Recorrer el texto de dinosaurio
 			while (i < texto.length) {
 				let encontrado = false;
 
-				// Buscar la coincidencia más larga en el diccionario de dinosaurio
 				for (let dino of clavesOrdenadas) {
 					if (texto.startsWith(dino, i)) {
-						traduccion += dinosaurioAEspanol[dino]; // Agregar la letra correspondiente
-						i += dino.length; // Mover el índice según la longitud del dino
+						traduccion += dinosaurioAEspanol[dino];
+						i += dino.length;
 						encontrado = true;
 						break;
 					}
 				}
 
-				// Si no se encontró una coincidencia, agregar el carácter original
 				if (!encontrado) {
 					traduccion += texto[i];
 					i++;
@@ -218,7 +211,6 @@
 		}
 
 
-        // Función para copiar texto
         function copiarTexto() {
             const resultado = document.getElementById("resultado").innerText;
             navigator.clipboard.writeText(resultado).then(() => {
@@ -226,7 +218,6 @@
             });
         }
 
-        // Función para mostrar la notificación
         function mostrarNotificacion() {
             const notification = document.getElementById("notification");
             notification.style.display = 'block';
@@ -235,13 +226,16 @@
             }, 2000);
         }
 
-        // Función para cambiar de tema
         function toggleTheme() {
             const body = document.body;
             body.classList.toggle("dark");
             const themeIcon = document.getElementById("themeToggle");
             themeIcon.classList.toggle("fa-sun");
             themeIcon.classList.toggle("fa-moon");
+        }
+		
+		 function borrarTexto() {
+            document.getElementById("inputText").value = ""; 
         }
     </script>
 
